# glsandbox

./: .editorconfig  .gitignore  meson.build  utility.cpp
hello_world/: main.cpp
include/: utility.h
postprocessing/: main.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: gl.h
subprojects/glad/src/: gl.c
